2005-02-01  Hans-Peter Nilsson  <hp@axis.com>

	* cris/Makefile.in (ALL_INSTALL_FILES): New macro.
	(ALL_INSTALL_FILES_NEWLIB_COPY): New macro.
	(all): Use ALL_INSTALL_FILES instead of its contents.  Add
	ALL_INSTALL_FILES_NEWLIB_COPY.
	($(objroot)/newlib/%, $(objroot)/newlib/libnosys.a): New rules

2005-01-27  Hans-Peter Nilsson  <hp@axis.com>

        * configure.in: Support cris-*-* and crisv32-*-*.
        * libnosys/configure.in: Ditto.
	* configure, libnosys/configure: Regenerate.
	* cris: New directory.
	* cris/crt0.S, cris/crtn.c, cris/gensyscalls, cris/linunistd.h,
	cris/outbyte.c, cris/configure.in, cris/crti.c, cris/lcrt0.c,
	cris/Makefile.in, cris/setup.S, cris/configure: New files.

2005-01-21  Hans-Peter Nilsson  <hp@axis.com>

	* libnosys/warning.h (stub_warning): Remove "warning: " prefix.

2005-01-18  Hans-Peter Nilsson  <hp@axis.com>

	* libnosys/warning.h (link_warning) [HAVE_GNU_LD and HAVE_ELF]:
	Prefix symbol in section name with __SYMBOL_PREFIX.  Do not use
	__make_section_unallocated.  Mark magic variable as used.

2005-01-18  Hans-Peter Nilsson  <hp@axis.com>

	* libnosys/configure.in (libc_cv_asm_previous_directive): Set
	cache-id variable.
	(libc_cv_asm_popsection_directive): Ditto.
	(libc_cv_section_attributes): Ditto.
	(libc_symbol_prefix): Rename from libc_dollar_prefix.  Check for
	"_" as well, and set __SYMBOL_PREFIX accordingly.
	* libnosys/configure: Regenerate.

2005-01-18  Hans-Peter Nilsson  <hp@axis.com>

	* libnosys/Makefile.in (LD, AS): Correct obsoleted suffix: Say
	as-new and ld-new, not as.new and ld.new.

2005-01-14  Hans-Peter Nilsson  <hp@axis.com>
                                                                                
        * libnosys/warning.h (__make_section_unallocated)
        [HAVE_ASM_PREVIOUS_DIRECTIVE, HAVE_ASM_POPSECTION_DIRECTIVE]: Use "\n"
        instead of ";" to delimit assembly lines.
                                                                                